# meeting-summarizer

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  bedrock_utils.py  pyproject.toml  requirements-dev.txt  requirements.txt  transcribe_live.py  web_app.py
.github/workflows/: ci.yml  lint.yml  nightly-security-scan.yaml  trivy.yaml
deliverables/: 01-refine-pipeline.md  02-review-functionality.md  03-prepare-deployment.md
docs/: zoom-breakout-bot.md
docs/superpowers/specs/: 2026-03-25-auto-summary-design.md
playwright_bot/: __init__.py  exceptions.py  meeting_monitor.py  test_audio.py  test_breakout.py  test_join.py  zoom_selectors.py  zoom_web_bot.py
playwright_bot/audio/: __init__.py  capturer.py  exceptions.py  processor.py
playwright_bot/page_objects/: __init__.py  base_page.py  breakout_room_page.py  meeting_page.py  pre_join_page.py  waiting_room_page.py
src/: __init__.py
src/audio/: __init__.py  processor.py
src/gui/: __init__.py
src/storage/: __init__.py  manager.py
src/summarization/: __init__.py  service.py
src/transcription/: service.py
static/: index.html
tests/: __init__.py  conftest.py  test_audio.py  test_audio_processor.py  test_exceptions.py  test_storage.py  test_summarization.py  test_transcribe_live.py  test_web_app.py
zoom-bot/: .env.example  .gitignore  Dockerfile  docker-compose.yml  requirements.txt  start.sh  test_join.py  zoom_bot.py
